@@ -6358,4 +6358,6 @@
 	  yet work (2014-1-1).
 	* arch/arm/src/stm32/stm32_serial.c: Single-wire UART support from
 	  Thomas Grubler (2014-1-2).
+	* tools/configure.c and mkdeps.c:  Fixes for Windows build issues
+	  from Max Holtzberg (2014-1-4).
 
